# lens_edger_dash

./: CHANGELOG.md  CHECKLIST.md  DELIVERABLES.md  IMPLEMENTATION_NOTES.md  INDEX.md  INTEGRATION_GUIDE.py  QUICKSTART.md  README.md  SUMMARY.md  VISUAL_REFERENCE.md  examples_movement_path.py  main.py  pyproject.toml  startup.sh
assets/: bevel_rough.vtk  roughing.vtk  style.css  vtk_setup.js
callbacks/: __init__.py  prepare_logic.py  removal_simulation_logic.py  roughing_logic.py  sidebar_logic.py  simulation_logic.py
callbacks/utils/: roughing_utils.py  three_d_prepare_logic.py
components/: movement_sidebar.py  prepare_sidebar.py  removal_simulation_tab.py  roughing_contour_tab.py  sidebar.py  simulation_tab.py  three_d_prepare_tab.py  two_d_preview_tab.py
core/: machine_config.py  oma_parser.py
core/cam/: kinematics.py  movement_path.py  path_generation.py
core/exporters/: path_exporter.py
core/geometric/: lens_volume.py  roughing_generation.py  three_d_generation.py  three_d_loader.py  tool_profiles.py  tool_sdf.py  two_d_generation.py
core/models/: lenses.py  roughing.py  tools.py
docs/: volume_simulation_overview.md  volume_simulation_technical.md
tests/: kinematics_test.py  test_tool_sdf.py  test_volume.html  test_volume.js  test_volume.py  test_volume_2.html  test_volume_3.html
