[project]
name = "lens-edger-cam-software"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-vtk>=0.0.9",
    "gunicorn>=23.0.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyinstaller>=6.17.0",
    "rtree>=1.4.1",
    "scipy>=1.16.3",
    "trimesh>=4.10.1",
    "vtk>=9.5.2",
]
